fix: Line break truncated characters in English(#3103)

--- a/ui/src/styles/md-editor.scss
+++ b/ui/src/styles/md-editor.scss
@@ -11,6 +11,7 @@
   }
   p {
     padding: 0 !important;
+    word-break: break-word;
   }
   .md-editor-admonition {
     margin: 0;
